--- a/prjct6 - menu slider and modal/index.html
+++ b/prjct6 - menu slider and modal/index.html
@@ -91,11 +91,21 @@
           <form class="modal-form">
             <div>
               <label for="name">Name</label>
-              <input type="text" id="name" placeholder="Enter name" />
+              <input
+                type="text"
+                id="name"
+                placeholder="Enter name"
+                class="form-input"
+              />
             </div>
             <div>
               <label for="email">Email</label>
-              <input type="email" id="email" placeholder="Enter email" />
+              <input
+                type="email"
+                id="email"
+                placeholder="Enter email"
+                class="form-input"
+              />
             </div>
             <div>
               <label for="password">Password</label>
@@ -103,6 +113,7 @@
                 type="password"
                 id="password"
                 placeholder="Enter Password"
+                class="form-input"
               />
             </div>
             <div>
@@ -111,6 +122,7 @@
                 type="password"
                 id="password2"
                 placeholder="Confirm Password"
+                class="form-input"
               />
             </div>
             <input type="submit" value="submit" class="submit-btn" />
